<resources>
    <string name="app_name">有趣分享</string>
    <string name="data_error">数据异常</string>
    <string name="photo_detail_indicator">%1$d/%2$d</string>

    <string name="alipay">支付宝</string>
    <string name="alipay_rapid">支付宝快捷入口</string>
    <string name="alipay_scan">支付宝扫码入口</string>
    <string name="wechat">微信扫码入口</string>
    <string name="store_select_pay">选择打赏方式</string>
    <string name="string_money">元</string>
    <string name="string_copy">复制</string>
    <string name="string_collection">收藏</string>
    <string name="send_red_packet_amount_unit">元</string>
    <string name="modify_amount">修改金额</string>
    <string name="to_pay">塞钱</string>
    <string name="input_amount_hint">请输入金额</string>
    <string name="string_welfare">福利</string>
    <string name="string_about_me">关于我</string>
    <string name="string_recommend">推荐</string>
    <string name="string_joke_img">趣图</string>
    <string name="string_joke_text">趣事</string>
    <string name="string_reward">赏一下</string>
    <string name="string_empty_collection">你还没有收藏哦</string>


    <string name="error_network_failed">您的网络不太给力哦</string>
    <string name="error_network_retry">点击屏幕重试</string>
    <string name="string_top_line">头条</string>
    <string name="string_wechat">精选</string>
    <string name="home_square">首页</string>
    <string name="home_userprofile">我的</string>

    <string name="string_empty_data">暂无数据，请稍后在来看吧</string>


    <!--时间格式化-->
    <string name="time_format_second">ss</string>
    <string name="time_format_minute">mm</string>
    <string name="time_format_minute_second">mm:ss</string>
    <string name="time_format_hour_24">HH</string>
    <string name="time_format_hour_24_minute">HH:mm</string>
    <string name="time_format_hour_24_minute_second">HH:mm:ss</string>
    <string name="time_format_hour_12">hh</string>
    <string name="time_format_day">dd</string>
    <string name="time_format_month">MM</string>
    <string name="time_format_month_day">MM-dd</string>
    <string name="time_format_year">yyyy</string>
    <string name="time_format_year_month">yyyy-MM</string>
    <string name="time_format_year_month_day">yyyy-MM-dd</string>
    <string name="time_format_year_month_day_24_detail">yyyy-MM-dd HH:mm:ss</string>
    <string name="time_format_year_month_day_24_short">yyyy-MM-dd HH:mm</string>
    <string name="time_format_year_month_day_24_short_slashes">yyyy/MM/dd HH:mm</string>
    <string name="time_format_month_day_24_short_slashes">MM/dd HH:mm</string>
    <string name="time_format_year_month_day_slashes">yyyy/MM/dd</string>
    <string name="time_format_month_day_slashes">MM/dd</string>
    <string name="time_format_month_year_slashes">yyyy/MM</string>
    <string name="time_format_year_month_day_point">yyyy.MM.dd</string>
    <string name="time_format_month_day_cn">MM月dd日</string>
    <string name="time_format_day_cn">d日</string>
    <string name="time_format_month_cn">M月</string>
    <string name="time_format_year_month_day_24_short_cn">MM月dd日 HH:mm</string>
    <string name="time_format_year_month_day_24_detail_cn">yyyy年MM月dd日HH时mm分ss秒</string>
    <string name="time_format_year_month_day_cn">yyyy年MM月dd号</string>
    <string name="time_format_elapsed_year">%1$d年前</string>
    <string name="time_format_elapsed_month">%1$d月前</string>
    <string name="time_format_elapsed_day">%1$d天前</string>
    <string name="time_format_elapsed_hour">%1$d小时前</string>
    <string name="time_format_elapsed_minute">%1$d分钟前</string>
    <string name="time_format_elapsed_just">刚刚</string>
    <string name="time_format_splice_hour">%1$d小时</string>
    <string name="time_format_splice_minute">%1$d分钟</string>
    <string name="exitapp">再次点击返回退出应用</string>
</resources>
