<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <View
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:background="@color/color_4876FF" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.qin.tao.share.app.base.BaseTextView
                android:id="@+id/welfare"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/welfare_bg"
                android:gravity="center"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:text="@string/string_welfare"
                android:textColor="@color/white"
                android:textSize="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="120dp"
                    android:layout_weight="1"
                    android:background="@color/color_ef9a19"
                    android:gravity="center">

                    <com.qin.tao.share.app.base.BaseTextView
                        android:id="@+id/tv_joke_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:drawablePadding="5dp"
                        android:drawableTop="@drawable/joke_text_bg"
                        android:gravity="center"
                        android:text="@string/string_joke_text"
                        android:textColor="@color/white"
                        android:textSize="@dimen/font_normal" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="120dp"
                    android:layout_weight="1"
                    android:background="@color/lightorange"
                    android:gravity="center">

                    <com.qin.tao.share.app.base.BaseTextView
                        android:id="@+id/tv_joke_mig"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:drawablePadding="5dp"
                        android:drawableTop="@drawable/joke_img_bg"
                        android:gravity="center"
                        android:text="@string/string_joke_img"
                        android:textColor="@color/white"
                        android:textSize="@dimen/font_normal" />

                </LinearLayout>

            </LinearLayout>


            <com.qin.tao.share.app.base.BaseTextView
                android:id="@+id/wechat"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/wechat_bg"
                android:gravity="center"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:text="@string/string_wechat"
                android:textColor="@color/white"
                android:textSize="20dp" />

            <com.qin.tao.share.app.base.BaseTextView
                android:id="@+id/topLine"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/top_line_bg"
                android:gravity="center"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:text="@string/string_top_line"
                android:textColor="@color/white"
                android:textSize="20dp" />

            <com.qin.tao.share.app.base.BaseTextView
                android:id="@+id/reward"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/reward_bg"
                android:gravity="center"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:text="@string/string_reward"
                android:textColor="@color/white"
                android:textSize="20dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:background="@color/app_color_bg" />

            <RelativeLayout
                android:id="@+id/rl_recommend"
                android:layout_width="match_parent"
                android:layout_height="@dimen/row_h_normal"
                android:background="@drawable/list_selected_item_bg"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/padding_normal">

                <ImageView
                    android:id="@+id/img_recommend"
                    android:layout_width="@dimen/icon_small"
                    android:layout_height="@dimen/icon_small"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/padding_small"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/me_recommend_icon" />

                <com.qin.tao.share.app.base.BaseTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/padding_small"
                    android:layout_toRightOf="@+id/img_recommend"
                    android:text="@string/string_recommend"
                    android:textColor="@color/yc_black_75"
                    android:textSize="@dimen/font_normal" />

                <ImageView
                    android:id="@+id/recommend_arrow"
                    android:layout_width="@dimen/icon_small"
                    android:layout_height="@dimen/icon_small"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/margin_min"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/public_buttom_arrow"
                    android:visibility="visible" />

            </RelativeLayout>


            <View
                android:id="@+id/adLine"
                style="@style/SpaceLine"
                android:layout_marginLeft="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_small" />

            <RelativeLayout
                android:id="@+id/rl_about_me"
                android:layout_width="match_parent"
                android:layout_height="@dimen/row_h_normal"
                android:background="@drawable/list_selected_item_bg"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/padding_normal">

                <ImageView
                    android:id="@+id/img_about_me"
                    android:layout_width="@dimen/icon_small"
                    android:layout_height="@dimen/icon_small"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/padding_small"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/more_about_us" />

                <com.qin.tao.share.app.base.BaseTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/padding_small"
                    android:layout_toRightOf="@+id/img_about_me"
                    android:text="@string/string_about_me"
                    android:textColor="@color/yc_black_75"
                    android:textSize="@dimen/font_normal" />

                <ImageView
                    android:id="@+id/about_me_arrow"
                    android:layout_width="@dimen/icon_small"
                    android:layout_height="@dimen/icon_small"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/margin_min"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/public_buttom_arrow"
                    android:visibility="visible" />

            </RelativeLayout>

            <View style="@style/SpaceLine" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
