<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.qin.tao.share.widget.title.TitleView
        android:id="@+id/titleView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/titleView"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.qin.tao.share.widget.imageview.FixRatioImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/redpacket_bg"
                app:ratio="5.86" />


            <RelativeLayout
                android:id="@+id/rel_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_large"
                android:layout_marginRight="@dimen/padding_large"
                android:layout_marginTop="@dimen/margin_min"
                android:background="@drawable/shape_five_corner_fill_white"
                android:paddingLeft="@dimen/padding_large"
                android:paddingRight="@dimen/padding_large">

                <com.qin.tao.share.app.base.BaseTextView
                    android:id="@+id/btv_comment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:gravity="center_vertical"
                    android:paddingBottom="11dp"
                    android:paddingTop="11dp"
                    android:textColor="@color/deepgray"
                    android:textSize="@dimen/font_normal"
                    tools:text="111" />

            </RelativeLayout>


            <LinearLayout
                android:id="@+id/ll_show_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                android:paddingLeft="42dp"
                android:visibility="visible">


                <com.qin.tao.share.app.base.BaseTextView
                    android:id="@+id/btv_money_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="8dp"
                    android:layout_toLeftOf="@+id/btv_money_unit"
                    android:background="@android:color/transparent"
                    android:gravity="right"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_larger"
                    tools:text="10" />

                <com.qin.tao.share.app.base.BaseTextView
                    android:id="@+id/btv_money_unit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_vertical"
                    android:layout_toLeftOf="@+id/ll_dice"
                    android:text="@string/send_red_packet_amount_unit"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_larger" />

                <LinearLayout
                    android:id="@+id/ll_dice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/padding_normal"
                    android:padding="@dimen/padding_normal">
                    <!-- 该位置最终要在代码中计算，位置为居中偏离右侧65dp，不包括layout_marginLeft值-->
                    <ImageView
                        android:id="@+id/iv_dice"
                        android:layout_width="@dimen/icon_normal"
                        android:layout_height="@dimen/icon_normal"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/dice_anim" />
                </LinearLayout>

            </LinearLayout>

            <com.qin.tao.share.app.base.BaseEditText
                android:id="@+id/bet_money_amount"
                android:layout_width="150dp"
                android:layout_height="42dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="8dp"
                android:layout_toLeftOf="@+id/btv_money_unit"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:hint="@string/input_amount_hint"
                android:inputType="numberDecimal"
                android:maxLength="7"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textColorHighlight="@color/lightgray"
                android:textSize="@dimen/font_normal"
                android:visibility="gone"
                tools:text="10" />


            <com.qin.tao.share.app.base.BaseTextView
                android:id="@+id/btv_update_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:clickable="true"
                android:paddingBottom="@dimen/padding_large"
                android:paddingLeft="@dimen/padding_normal"
                android:paddingRight="@dimen/padding_normal"
                android:paddingTop="@dimen/padding_normal"
                android:text="@string/modify_amount"
                android:textColor="@color/blue"
                android:textSize="@dimen/font_small" />

            <Button
                android:id="@+id/sbmit_money"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_large"
                android:layout_marginRight="@dimen/padding_large"
                android:background="@drawable/btn_corner_red_bg"
                android:text="@string/to_pay"
                android:textColor="@color/white"
                android:textSize="@dimen/font_normal" />

        </LinearLayout>

    </RelativeLayout>

    <View
        android:id="@+id/maskView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/titleView"
        android:visibility="gone" />
</RelativeLayout>
